seperation to classes and modules-player and enemy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Mini Game</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script defer src="js/main.js"></script>
+    <script type="module" defer src="js/main.js"></script>
+    <script type="module" defer  src="js/enemy.js"></script>
+    <script type="module" defer  src="js/player.js"></script>
 </head>
 <body>
     <div id="background"></div>
