Implemented the collision detection

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 <body>
     <div id="background"></div>
     <div id="back-image"></div>
+    <section class="animate__animated" id="game-over-window">
+        <div><img id="game-over-logo" src=""></div>
+        <h1 id="final-score">Your Score: 150</h1>
+        <div><img class="touch" id="btn-play" src=""></div>
+    </section>
 </body>
 </html>
