--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <script type="module" defer  src="js/player.js"></script>
 </head>
 <body>
+
     <div id="background"></div>
     <div id="back-image"></div>
     <section class="animate__animated" id="game-over-window">
         <div><img id="game-over-logo" src=""></div>
         <h1 id="final-score">Your Score: 150</h1>
-        <div><img class="touch" id="btn-play" src=""></div>
+        <label class="touch"><img class="touch" id="btn-play" src=""></label>
     </section>
 </body>
 </html>
